pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mypod
 labels:
   app: myapp
spec:
 containers:
 - name: con1
   image: wordpress:latest
   ports:
   - containerPort: 80
 - name: con2
   image: mysql:5.7
   ports:
   - containerPort: 3306
# nodeName: crc
  nodeSelector:
    node: green
