mysql.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mysql
 labels:
   app: mysql
spec:
 containers:
 - name: con1
   image: mysql:5.7
   ports:
   - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
