svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypod-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
