wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
 name: wordpress
 labels:
   app: wordpress
spec:
 containers:
 - name: con1
   image: wordpress:latest
   ports:
   - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: wordpress-svc
